Bug 419371 - gradient tool uneditable
Summary: gradient tool uneditable
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2020-03-29 11:06 UTC by til.schmitter
Modified: 2020-12-15 12:23 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot of my tool settings, result etc (380.08 KB, image/png)
2020-03-29 11:06 UTC, til.schmitter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description til.schmitter 2020-03-29 11:06:32 UTC
Created attachment 127082 [details]
screenshot of my tool settings, result etc

krita next b1b691b

(sorry for spamming so much today)

the gradient tool doesn't change according to my color selection and always makes a gradient between a desaturated dark blue and white

expected result:
a gradient from black to transparent
Comment 1 wolthera 2020-03-29 11:36:34 UTC
Make sure that the active gradient is the fore-to-background gradient?
Comment 2 til.schmitter 2020-03-29 11:41:39 UTC
oh, i've never even clicked on the gradient tool. it seems to have switched on its own. but even the foreground to background gradient is completely opaque for me...
Comment 3 til.schmitter 2020-03-29 11:57:01 UTC
ok, now i've definitely encountered an issue regarding this. every time i restart krita it switches back to the first type of gradient in the list

there might be issues with loading in general because all the bugs i encountered today seem to be related to loading stuff
Comment 4 Halla Rempt 2020-05-06 14:16:08 UTC
Oh, this is probably another resource rewrite issue since Til is using nightly builds. If you want to be productive, better use nightly stable at the moment.
Comment 5 Tiar 2020-07-28 12:09:12 UTC
Two issues:
- Foreground to Transparent is opaque
- Krita switches back to the first gradient in the list (which *isn't* Foreground to Transparent) after a restart
Confirming.
Comment 6 Halla Rempt 2020-12-15 12:23:21 UTC
Git commit 34adff61a9dd7550b24d1f22b7fc832480ea3bf1 by Halla Rempt, on behalf of Sven Langkamp.
Committed on 15/12/2020 at 12:22.
Pushed by langkamp into branch 'master'.

Fix retrieval of a resource from KisMemoryStorage

The problem was that the full url was used for the resource lookup while the resource was just saved with the filename in the resources map.

M  +5    -3    libs/resources/KisMemoryStorage.cpp
M  +14   -0    libs/resources/tests/TestMemoryStorage.cpp
M  +1    -0    libs/resources/tests/TestMemoryStorage.h

https://invent.kde.org/graphics/krita/commit/34adff61a9dd7550b24d1f22b7fc832480ea3bf1