Fix retrieval of a resource from KisMemoryStorage

The problem was that the full url was used for the resource lookup while the resource was just saved with the filename in the resources map.

BUG:419371