libs/resources/KisMemoryStorage.cpp
@@ -200,10 +200,12 @@ KisResourceStorage::ResourceItem KisMemoryStorage::resourceItem(const QString &u
 KoResourceSP KisMemoryStorage::resource(const QString &url)
 {
     KoResourceSP resource;
-    QFileInfo fi(location() + '/' + url);
-    const QString resourceType = fi.path().split("/").last();
+
+    QStringList splitUrl = url.split("/");
+    const QString resourceType = splitUrl.first();
+    const QString resourceFilename = splitUrl.last();
     Q_FOREACH(resource, d->resources[resourceType]) {
-        if (resource->filename() == url) {
+        if (resource->filename() == resourceFilename) {
             break;
         }
     }
